--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Music Compare</title>
+    <title>Modal Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Spotify Music Compare</h1>
-    </header>
 
-    <main>
-        <button id="login-btn">🎵 Mit Spotify verbinden</button>
-        <div id="profile"></div>
-        <div id="top-artists"></div>
-    </main>
+    <button id="openModal">Modal öffnen</button>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2>Hallo!</h2>
+            <p>Das ist ein Test-Modal.</p>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
